updated onFrequencyChange to call the correct methods

--- a/CreateNewJavaScript.html
+++ b/CreateNewJavaScript.html
@@ -6,8 +6,7 @@
     utils.disableButtons();
 
     clearOptions();
-    updateFrequencyCustom();
-    updateDaysInWeek();
+    onFrequencyChanged();
 
     utils.enableButtons();
   });
@@ -64,8 +63,9 @@
   }
 
   function onFrequencyChanged() {
-    updateFrequencyCustom();
-    updateDaysInWeek();
+    updateFrequencyDaily();
+    updateFrequencyWeekly();
+    updateFrequencyCustomDates();
   }
 
   function onCreateClick() {
