fixed incorrect days in week visibilty

--- a/CreateNewJavaScript.html
+++ b/CreateNewJavaScript.html
@@ -42,7 +42,7 @@
     } else {
       // others
       $endDate.addClass('hidden');
-      $daysInWeek.removeClass('hidden');
+      $daysInWeek.addClass('hidden');
     }
   }
 
