--- a/CreateNewJavaScript.html
+++ b/CreateNewJavaScript.html
@@ -83,30 +83,38 @@
         function(msg) {
           utils.failure(msg);
         })
-      .createNew(createOptions.sheetname, createOptions.frequency, createOptions.daysDisplay, createOptions.showNext, createOptions.daysInWeek, createOptions.customSheetname, createOptions.customRange);
+      .createNew(
+        createOptions.sheetname, 
+        createOptions.frequency, 
+        createOptions.startDate, 
+        createOptions.endDate, 
+        createOptions.daysInWeek, 
+        createOptions.customSheetname, 
+        createOptions.customRange
+        );
   }
 
   function getOptions() {
     return {
       sheetname: $('#sidebar-fillup-sheetname').val().trim(),
       frequency: $('#sidebar-fillup-frequency').val(),
-      customSheetname: $('#sidebar-fillup-frequency-custom-sheetname').val(),
-      customRange: $('#sidebar-fillup-frequency-custom-range').val(),
+      startDate: $('#sidebar-fillup-start-date').val(),
+      endDate: $('#sidebar-fillup-end-date').val(),
       daysInWeek: $.map($('#sidebar-fillup-days-in-week input:checked'), function(e) {
         return $(e).val();
       }),
-      daysDisplay: $('#sidebar-fillup-days-display').val().trim(),
-      showNext: $('#sidebar-fillup-show-next input:checkbox').is(':checked')
+      customSheetname: $('#sidebar-fillup-custom-dates-sheetname').val(),
+      customRange: $('#sidebar-fillup-custom-dates-range').val()
     };
   }
 
   function clearOptions() {
     $('#sidebar-fillup-sheetname').val($('#sidebar-fillup-sheetname-default').val());
     $('#sidebar-fillup-frequency').val('d');
-    $('#sidebar-fillup-frequency-custom-sheetname').val('');
-    $('#sidebar-fillup-frequency-custom-range').val('');
+    $('#sidebar-fillup-start-date').val($('#sidebar-fillup-start-date-default').val());
+    $('#sidebar-fillup-end-date').val($('#sidebar-fillup-end-date-default').val());
     $('#sidebar-fillup-days-in-week input:checkbox').removeAttr('checked');
-    $('#sidebar-fillup-days-display').val('3');
-    $('#sidebar-fillup-show-next input:checkbox').removeAttr('checked');
+    $('#sidebar-fillup-custom-dates-sheetname').val('');
+    $('#sidebar-fillup-custom-dates-range').val('');
   }
 </script>
