refactor styling for first td in tr of table

--- a/CreateFromExistingSidebar.html
+++ b/CreateFromExistingSidebar.html
@@ -5,18 +5,18 @@
   </p>
   <table id="roster-lookup-options-table" class="table sidebar-value-block" width="100%">
     <tr>
-      <td style="vertical-align:top">
+      <td>
         <label style="cursor:help" title="Select the sheet name.">Sheet: </label>
       </td>
       <td colspan="2">
         <div class="block form-group">
-          <input type="text" id="sidebar-lookup-sheetname" placeholder="Sheet name" value="">
+          <input type="text" id="sidebar-lookup-sheetname" placeholder="Sheet name" value="" style="width:10em;margin-top:1px;">
           <button class="narrow-button" title="Use selected sheet" onclick="utils.updateRange('', 'sidebar-lookup-sheetname');">↘</button>
         </div>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align:top">
+      <td>
         <label style="cursor:help" title="Select the range of names.">Name: </label>
       </td>
       <td colspan="2">
@@ -27,7 +27,7 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align:top">
+      <td>
         <label style="cursor:help" title="Select the range of timeslots.">Timeslot: </label>
       </td>
       <td colspan="2">
@@ -38,7 +38,7 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align:top">
+      <td>
         <label style="cursor:help" title="Select the range of timestamps.">Submitted on: </label>
       </td>
       <td colspan="2">
@@ -49,7 +49,7 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align:top">
+      <td>
         <label style="cursor:help" title="Number of days for data to retend (used to remove old data).">Data rentention days: </label>
       </td>
       <td colspan="2">
@@ -62,7 +62,7 @@
   </p>
   <table id="roster-fillup-options-table" class="table sidebar-value-block" width="100%">
     <tr>
-      <td style="vertical-align:top">
+      <td>
         <label style="cursor:help" title="Select the sheet name.">Sheet: </label>
       </td>
       <td colspan="2">
@@ -73,7 +73,7 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align:top">
+      <td>
         <label style="cursor:help" title="Select the range of names.">Name: </label>
       </td>
       <td colspan="2">
@@ -84,7 +84,7 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align:top">
+      <td>
         <label style="cursor:help" title="Select the range of timetable (to be fill up regularly).">Timetable: </label>
       </td>
       <td colspan="2">
@@ -95,7 +95,7 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align:top">
+      <td>
         <label style="cursor:help" title="Select the range of last updated on.">Last updated on: </label>
       </td>
       <td colspan="2">
