--- a/StyleSheet.html
+++ b/StyleSheet.html
@@ -140,4 +140,7 @@ label {
   height: 25px;
   line-height: 25px;
 }
+.sidebar.roster table > tr > td:nth-child(1){
+  vertical-align: top;
+}
 </style>
