updated table first td in tr styling

--- a/StyleSheet.html
+++ b/StyleSheet.html
@@ -140,7 +140,8 @@ label {
   height: 25px;
   line-height: 25px;
 }
-.sidebar.roster table > tr > td:nth-child(1){
+.sidebar.roster table > tbody > tr > td:nth-child(1){
   vertical-align: top;
+  width: 100px;
 }
 </style>
