fixed data retention days label

--- a/CreateFromExistingSidebar.html
+++ b/CreateFromExistingSidebar.html
@@ -50,7 +50,7 @@
     </tr>
     <tr>
       <td>
-        <label style="cursor:help" title="Number of days for data to retend (used to remove old data).">Data rentention days: </label>
+        <label style="cursor:help" title="Number of days for data to retend (used to remove old data).">Retention days: </label>
       </td>
       <td colspan="2">
         <input type="text" id="sidebar-lookup-data-retention-days" value="" required/>
