added create button for create from existing form

--- a/CreateFromExistingSidebar.html
+++ b/CreateFromExistingSidebar.html
@@ -105,6 +105,13 @@
         </div>
       </td>
     </tr>
+    <tr>
+      <td width="66%">
+      </td>
+      <td width="33%" style="text-align:right;" class="create">
+        <button class="sidebar-button" id="sidebar-create-button">Create</button>
+      </td>
+    </tr>
   </table>
   <div id="sidebar-status"></div>
 </div>
