added jquery ui

--- a/StyleSheet.html
+++ b/StyleSheet.html
@@ -1,5 +1,6 @@
 <!-- This CSS package applies Google styling; it should always be included. -->
 <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons.css">
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 
 <style>
 label {
