--- a/CreateNewJavaScript.html
+++ b/CreateNewJavaScript.html
@@ -114,8 +114,8 @@
       .createNew(
         createOptions.sheetname, 
         createOptions.frequency, 
-        createOptions.startDate, 
-        createOptions.endDate, 
+        createOptions.startDate.toISOString(), 
+        createOptions.endDate.toISOString(), 
         createOptions.daysInWeek, 
         createOptions.customSheetname, 
         createOptions.customRange
@@ -126,8 +126,8 @@
     return {
       sheetname: $('#sidebar-fillup-sheetname').val().trim(),
       frequency: $('#sidebar-fillup-frequency').val(),
-      startDate: $('#sidebar-fillup-start-date').val(),
-      endDate: $('#sidebar-fillup-end-date').val(),
+      startDate: $('#sidebar-fillup-start-date').datepicker("getDate"),
+      endDate: $('#sidebar-fillup-end-date').datepicker("getDate"),
       daysInWeek: $.map($('#sidebar-fillup-days-in-week input:checked'), function(e) {
         return $(e).val();
       }),
@@ -139,8 +139,8 @@
   function clearOptions() {
     $('#sidebar-fillup-sheetname').val($('#sidebar-fillup-sheetname-default').val());
     $('#sidebar-fillup-frequency').val('d');
-    $('#sidebar-fillup-start-date').val($('#sidebar-fillup-start-date-default').val());
-    $('#sidebar-fillup-end-date').val($('#sidebar-fillup-end-date-default').val());
+    $('#sidebar-fillup-start-date').datepicker("setDate", new Date());
+    $('#sidebar-fillup-end-date').datepicker("setDate", new Date());
     $('#sidebar-fillup-days-in-week input:checkbox').removeAttr('checked');
     $('#sidebar-fillup-custom-dates-sheetname').val('');
     $('#sidebar-fillup-custom-dates-range').val('');
