added TODO for date picker

--- a/CreateNewJavaScript.html
+++ b/CreateNewJavaScript.html
@@ -3,6 +3,7 @@
     $('#sidebar-fillup-frequency').change(onFrequencyChanged);
     $('#sidebar-create-button').click(onCreateClick);
 
+    // TODO: on date change, update weekly options
     $("#sidebar-fillup-start-date").datepicker({
       altFormat: "dd-MM-yy",
       dateFormat: "dd-M-yy",
