added styling for sidebar buttons

--- a/StyleSheet.html
+++ b/StyleSheet.html
@@ -145,4 +145,9 @@ label {
   vertical-align: top;
   width: 100px;
 }
+.sidebar-button-group{
+  text-align:right;
+  padding-top:11px;
+  padding-bottom:11px;
+}
 </style>
