removed create button from table tag

--- a/CreateNewSidebar.html
+++ b/CreateNewSidebar.html
@@ -89,14 +89,10 @@
         </div>
       </td>
     </tr>
-    <tr>
-      <td width="66%">
-      </td>
-      <td width="33%" style="text-align:right;" class="create">
-        <button class="sidebar-button" id="sidebar-create-button">Create</button>
-      </td>
-    </tr>
   </table>
+  <div class="block sidebar-button-group">
+    <button class="action" id="sidebar-create-button">Create</button>
+  </div>
   <div id="sidebar-status"></div>
 </div>
 
