updated credit line color

--- a/CreateFromExistingSidebar.html
+++ b/CreateFromExistingSidebar.html
@@ -117,7 +117,7 @@
 </div>
 
 <div class="sidebar bottom">
-  <div id="static-loader" class="show-inline">Created by <a href="https://github.com/ryancyq/roster-google-sheets-add-on"><img class="logo" width="20" src="https://avatars.githubusercontent.com/ryancyq?v=3&s=20s"></a></div>
+  <div id="static-loader" class="show-inline gray">Created by <a href="https://github.com/ryancyq/roster-google-sheets-add-on"><img class="logo" width="20" src="https://avatars.githubusercontent.com/ryancyq?v=3&s=20s"></a></div>
   <div id="dynamic-loader" class="hidden">
     <div class="loader">
       <svg class="circular" viewBox="30 30 30 30">
