--- a/CreateFromExistingJavaScript.html
+++ b/CreateFromExistingJavaScript.html
@@ -3,6 +3,7 @@ $(function() {
     utils.disableButtons();
 
     clearOptions();
+    loadConfig();
     
     utils.enableButtons();
   });
@@ -47,7 +48,30 @@ $(function() {
     };
   }
 
+  function loadConfig() {
+
+    google.script.run
+      .withSuccessHandler(
+        function(config) {
+          if(config){
+            $('#sidebar-fillup-sheetname').val($('#sidebar-fillup-sheetname-default').val());
+            $('#sidebar-fillup-frequency').val('d');
+            $('#sidebar-fillup-start-date').val($('#sidebar-fillup-start-date-default').val());
+            $('#sidebar-fillup-end-date').val($('#sidebar-fillup-end-date-default').val());
+            $('#sidebar-fillup-days-in-week input:checkbox').removeAttr('checked');
+            $('#sidebar-fillup-custom-dates-sheetname').val('');
+            $('#sidebar-fillup-custom-dates-range').val('');
+          }
+        })
+      .withFailureHandler(
+        function(msg) {
+          utils.failure(msg);
+        })
+      .readConfigForActiveSheet();
+  }
+
   function clearOptions() {
+
     $('#sidebar-fillup-sheetname').val($('#sidebar-fillup-sheetname-default').val());
     $('#sidebar-fillup-frequency').val('d');
     $('#sidebar-fillup-start-date').val($('#sidebar-fillup-start-date-default').val());
