--- a/CreateFromExistingJavaScript.html
+++ b/CreateFromExistingJavaScript.html
@@ -71,13 +71,15 @@ $(function() {
   }
 
   function clearOptions() {
+    $('#sidebar-lookup-sheetname').val('');
+    $('#sidebar-lookup-person-name-range').val('');
+    $('#sidebar-lookup-timeslot-range').val('');
+    $('#sidebar-lookup-timestamp-range').val('');
+    $('#sidebar-lookup-date-retention-days').val(90);
 
-    $('#sidebar-fillup-sheetname').val($('#sidebar-fillup-sheetname-default').val());
-    $('#sidebar-fillup-frequency').val('d');
-    $('#sidebar-fillup-start-date').val($('#sidebar-fillup-start-date-default').val());
-    $('#sidebar-fillup-end-date').val($('#sidebar-fillup-end-date-default').val());
-    $('#sidebar-fillup-days-in-week input:checkbox').removeAttr('checked');
-    $('#sidebar-fillup-custom-dates-sheetname').val('');
-    $('#sidebar-fillup-custom-dates-range').val('');
+    $('#sidebar-filup-sheetname').val('');
+    $('#sidebar-filup-person-name-range').val('');
+    $('#sidebar-filup-timetable-range').val('');
+    $('#sidebar-filup-timestamp-range').val('');
   }
 </script>
