--- a/CreateFromExistingJavaScript.html
+++ b/CreateFromExistingJavaScript.html
@@ -1,13 +1,13 @@
 <script>
-$(function() {
+  $(function() {
     utils.disableButtons();
 
     clearOptions();
     loadConfig();
-    
+
     utils.enableButtons();
   });
-  
+
   function onCreateClick() {
     utils.disableButtons();
     utils.enableLoader();
@@ -24,14 +24,14 @@ $(function() {
           utils.failure(msg);
         })
       .createNew(
-        createOptions.sheetname, 
-        createOptions.frequency, 
-        createOptions.startDate, 
-        createOptions.endDate, 
-        createOptions.daysInWeek, 
-        createOptions.customSheetname, 
+        createOptions.sheetname,
+        createOptions.frequency,
+        createOptions.startDate,
+        createOptions.endDate,
+        createOptions.daysInWeek,
+        createOptions.customSheetname,
         createOptions.customRange
-        );
+      );
   }
 
   function getOptions() {
@@ -49,18 +49,22 @@ $(function() {
   }
 
   function loadConfig() {
-
     google.script.run
       .withSuccessHandler(
         function(config) {
-          if(config){
-            $('#sidebar-fillup-sheetname').val($('#sidebar-fillup-sheetname-default').val());
-            $('#sidebar-fillup-frequency').val('d');
-            $('#sidebar-fillup-start-date').val($('#sidebar-fillup-start-date-default').val());
-            $('#sidebar-fillup-end-date').val($('#sidebar-fillup-end-date-default').val());
-            $('#sidebar-fillup-days-in-week input:checkbox').removeAttr('checked');
-            $('#sidebar-fillup-custom-dates-sheetname').val('');
-            $('#sidebar-fillup-custom-dates-range').val('');
+          if (config) {
+            $('#sidebar-lookup-sheetname').val(config.lookup_sheet_name);
+            $('#sidebar-lookup-person-name-range').val(config.lookup_range_person_name);
+            $('#sidebar-lookup-timeslot-range').val(config.lookup_range_timeslot);
+            $('#sidebar-lookup-timestamp-range').val(config.lookup_range_timestamp);
+            $('#sidebar-lookup-date-retention-days').val(config.lookup_data_retention_days);
+
+            $('#sidebar-fillup-sheetname').val(config.sheet_name);
+            $('#sidebar-fillup-person-name-range').val(config.range_person_name);
+            $('#sidebar-fillup-timetable-range').val(config.range_timetable);
+            $('#sidebar-fillup-timestamp-range').val(config.range_timestamp);
+          } else {
+            console.log('unable to load config');
           }
         })
       .withFailureHandler(
@@ -75,11 +79,11 @@ $(function() {
     $('#sidebar-lookup-person-name-range').val('');
     $('#sidebar-lookup-timeslot-range').val('');
     $('#sidebar-lookup-timestamp-range').val('');
-    $('#sidebar-lookup-date-retention-days').val(90);
+    $('#sidebar-lookup-date-retention-days').val('');
 
-    $('#sidebar-filup-sheetname').val('');
-    $('#sidebar-filup-person-name-range').val('');
-    $('#sidebar-filup-timetable-range').val('');
-    $('#sidebar-filup-timestamp-range').val('');
+    $('#sidebar-fillup-sheetname').val('');
+    $('#sidebar-fillup-person-name-range').val('');
+    $('#sidebar-fillup-timetable-range').val('');
+    $('#sidebar-fillup-timestamp-range').val('');
   }
 </script>
