--- a/CreateFromExistingSidebar.html
+++ b/CreateFromExistingSidebar.html
@@ -107,7 +107,7 @@
     </tr>
   </table>
   <div class="block sidebar-button-group">
-    <button class="action" id="sidebar-create-button">Create</button>
+    <button class="action" id="sidebar-save-button">Save</button>
   </div>
   <div id="sidebar-status"></div>
 </div>
